[package]
name = "argio"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

description = "A macro to convert function input and output to stdio"
repository = "https://github.com/tanakh/argio"
license = "MIT"
readme = "README.md"

categories = ["Development tools"]
keywords = ["io", "proc-macro"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0"
regex = "1.3"
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits"] }
proconio = "0.4"

[badges]
github = { repository = "tanakh/argio", workflow = "Rust" }
