[package]
name = "argio"
version = "0.1.2"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

description = "A macro to convert function input and output to stdio"
repository = "https://github.com/tanakh/argio"
license = "MIT"
readme = "README.md"

categories = ["development-tools"]
keywords = ["io", "proc-macro"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0"
regex = "1.3"
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0.24"

[dev-dependencies]
proconio = "0.4"
trybuild = "1.0.35"

[badges]
github = { repository = "tanakh/argio", workflow = "Rust" }
