[workspace]
members = ["argio-macro"]

[package]
name = "argio"
version = "0.2.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

description = "A macro to convert function input and output to stdio"
repository = "https://github.com/tanakh/argio"
license = "MIT"
readme = "README.md"

categories = ["development-tools"]
keywords = ["io", "proc-macro"]

[dependencies]
argio-macro = { path = "argio-macro" }
proconio = "0.4.3"

[dev-dependencies]
trybuild = "1.0.42"

[badges]
github = { repository = "tanakh/argio", workflow = "Rust" }
